--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "homepage": "https://github.com/anjolagithub/chorus-scholarship-blockchainETbackend#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "ethers": "^6.13.3",
     "hardhat": "^2.22.12"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.3",
     "ws": "^8.18.0"
   }
 }
