--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "hardhat": "^2.22.12"
   },
   "dependencies": {
+    "@ankr.com/ankr.js": "^0.5.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "web3": "^4.13.0",
+    "web3-providers": "^1.0.0-beta.55",
     "ws": "^8.18.0"
   }
 }
