--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "the blockchain integration for the CHORUS project using the Base on-chain network",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type": "module"
   },
   "repository": {
     "type": "git",
@@ -20,13 +21,24 @@
   },
   "homepage": "https://github.com/anjolagithub/chorus-scholarship-blockchainETbackend#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.11",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.9",
     "ethers": "^6.13.3",
-    "hardhat": "^2.22.12"
+    "hardhat": "^2.22.13",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@ankr.com/ankr.js": "^0.5.2",
+    "@ethersproject/providers": "^5.7.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "web3": "^4.13.0",
