--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "type": "module"
+    "type": "module",
+    "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . contracts/Scholarship.sol"
   },
   "repository": {
     "type": "git",
