--- a/package.json
+++ b/package.json
@@ -1,49 +1,32 @@
 {
   "name": "chorus-scholarship",
   "version": "1.0.0",
-  "description": "the blockchain integration for the CHORUS project using the Base on-chain network",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "type": "module",
     "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . contracts/Scholarship.sol"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anjolagithub/chorus-scholarship-blockchainETbackend.git"
-  },
-  "keywords": [
-    "Solidity/JS"
-  ],
-  "author": "Anjitech",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anjolagithub/chorus-scholarship-blockchainETbackend/issues"
-  },
-  "homepage": "https://github.com/anjolagithub/chorus-scholarship-blockchainETbackend#readme",
+  "repository": "https://github.com/anjolagithub/chorus-scholarship-blockchainETbackend.git",
+  "author": "Anjola Adeyemi <anjolaadeyemi4545@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
-    "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.11",
-    "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
-    "@types/chai": "^4.3.20",
-    "@types/mocha": "^10.0.9",
-    "ethers": "^6.13.3",
-    "hardhat": "^2.22.13",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@ankr.com/ankr.js": "^0.5.2",
-    "@ethersproject/providers": "^5.7.2",
-    "axios": "^1.7.7",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^1.0.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "chai": "^4.2.0",
     "dotenv": "^16.4.5",
-    "web3": "^4.13.0",
-    "web3-providers": "^1.0.0-beta.55",
-    "ws": "^8.18.0"
+    "ethers": "^5.7.2",
+    "hardhat": "^2.22.13",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.0",
+    "typechain": "^8.3.0"
   }
 }
