--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.13.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "typescript": "^5.6.2",
     "winston": "^3.15.0"
   }
